Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
ghx-label-9
Description
The following error message:
"Cannot process row that is bigger than the IO size (row_size=X MB, null_indicators_size=0). To run this query, increase the IO size (--read_size option)."
https://github.com/cloudera/Impala/blob/cba02a9a8b8cb765f9f4d2884f0a45e9af1bf2c7/common/thrift/generate_error_codes.py#L209-L211
, and the read_size option in general, needs to be reviewed to reflect changes from IMPALA-3200.
Attachments
Issue Links
- relates to
-
IMPALA-3200 Replace BufferedBlockMgr with new buffer pool
-
- Resolved
-