IMPALA-5778: clarify --read_size option.

Remove BTS_BLOCK_OVERFLOW error code, which is no longer used and
referenced --read_size.

Improve the flag description. The output is now:

    -read_size ((Advanced) The preferred I/O request size in bytes to issue to
      HDFS or the local filesystem. Increasing the read size will increase
      memory requirements. Decreasing the read size may decrease I/O
      throughput.) type: int32 default: 8388608

Testing:
Tested that Impala built and basic queries could run.

Change-Id: I3c20a9d55f89170b11f569c90b7f2949ddbe4211
Reviewed-on: http://gerrit.cloudera.org:8080/7623
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins